# Stat-Chat

./: README.md  analyzer.py  app.py  main.py  reporter.py  requirements.txt  runner.py  sample_data.csv
cli/: runner.py
core/: adjuster.py  analyzer.py  llm_backend.py  loader.py
gui/: app.py  chat_panel.py  settings_dialog.py
pkg/: README.md  pyproject.toml  requirements.txt
pkg/statchat/: __main__.py
pkg/statchat/cli/: runner.py
pkg/statchat/core/: adjuster.py  cleaner.py  reporter.py
pkg/statchat/gui/: settings_dialog.py
tests/: clean_data.csv  cli_post-annote.csv  cli_pre-annote.csv
