[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statchat"
version = "1.0.0"
description = "Data cleaning, normalization, statistical analysis and AI-powered iterative adjustment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["statistics", "data-analysis", "data-cleaning", "gui", "llm", "normalization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Desktop Environment",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "reportlab>=4.0",
    "matplotlib>=3.7",
    "Pillow>=9.0",
    "requests>=2.28",
]

[project.optional-dependencies]
# pip install statchat[lmstudio] — no extra deps needed, LM Studio uses the
# same OpenAI-compatible HTTP API already covered by requests.
# Kept as a marker so users know the feature exists.
lmstudio = []

dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
# This is the key line: installs a `statchat` command that calls main()
statchat = "statchat.__main__:main"

[project.urls]
Repository = "https://github.com/your-username/statchat"
"Bug Tracker" = "https://github.com/your-username/statchat/issues"

[tool.setuptools.packages.find]
# Automatically find statchat and all its sub-packages
where = ["."]
include = ["statchat*"]

[tool.setuptools.package-data]
# Bundle the icon files so they're available after pip install
statchat = [
    "icon.ico",
    "assets/icon.ico",
    "assets/icon.png",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
